# aj-dataops-personal

./: .env.template  .gitignore  Dockerfile  get_data.py  meltano.yml  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: release_draft.yml
analyze/evidence/: .gitignore  .profile.json  README.md  package-lock.json  package.json
analyze/evidence/.evidence/: bigquery-secrets.json.template  database.config.json.template
analyze/evidence/pages/: google-trends.md  pypi.md  rickandmorty.md
analyze/evidence/src/pages/: __layout.svelte  google-trends.md  index.md  pypi.md  rickandmorty.md
infra/: README.md
infra/deployments/01_service_fabric/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  pyproject.toml
infra/deployments/02_site_instance/: .env.template  Pulumi.dev.yaml  Pulumi.yaml  __main__.py  pyproject.toml
infra/deployments/03_hosted_project/: Pulumi.yaml  __main__.py  config.py  pyproject.toml
infra/deployments/03_hosted_project/tests/: test_poe.py
infra/deployments/04_activated_environment/: Pulumi.dev.yaml  __main__.py  meltano_project.py
infra/pulumi-meltano-lib/: Pulumi.yaml  pyproject.toml
infra/pulumi-meltano-lib/pulumi_meltano/: config.py  mocks.py  output.py  tests.py  util.py
infra/pulumi-meltano-lib/pulumi_meltano/components/: __init__.py  containers.py  eks.py  network.py
infra/pulumi-meltano-lib/tests/: test_pulumi_defs.py
output/: Untitled Diagram.drawio
transform/models/marts/: fact_pypi_downloads_daily.sql  fact_pypi_downloads_weekly.sql
transform/profiles/bigquery/: profiles.yml
(+4 files in other folders)
