[tool.poetry]
name = "aj-dataops-personal"
version = "0.1.0"
description = ""
authors = ["Aaron Steers <aj@airbyte.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
airbyte = "^0.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
