[tool.poetry]
name = "meltano-hosted-project"
version = "0.1.0"
description = ""
authors = ["Aaron (\"AJ\") Steers <aj@meltano.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pulumi = ">=3.0.0,<4.0.0"
pulumi-aws = ">=5.0.0,<6.0.0"
pulumi-awsx = "^1.0.0-beta.1"
pulumi-kubernetes = "^3.19.1"
pulumi-meltano = {path = "../../pulumi-meltano-lib"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
mypy = "^0.950"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
